--- a/src/app/pages/user/user-profil/user-profil.component.html
+++ b/src/app/pages/user/user-profil/user-profil.component.html
@@ -170,22 +170,22 @@
                 <!-- Change Password Form -->
                 <form>
 
-                  <div class="row mb-3">
+                  <!--<div class="row mb-3">
                     <label for="currentPassword" class="col-md-4 col-lg-3 col-form-label">Mot de passe actuel</label>
                     <div class="col-md-8 col-lg-9">
                       <input name="password" type="password" class="form-control" id="currentPassword" [(ngModel)]="userDto.motDePasse">
                     </div>
-                  </div>
+                  </div>-->
 
                   <div class="row mb-3">
-                    <label for="newPassword" class="col-md-4 col-lg-3 col-form-label">Nouveau Mot de passe</label>
+                    <label for="newPassword" class="col-md-4 col-lg-3 col-form-label">Nouveau mot de passe</label>
                     <div class="col-md-8 col-lg-9">
                       <input name="newpassword" type="password" class="form-control" id="newPassword" [(ngModel)]="changePassword.nouveauMotDePasse">
                     </div>
                   </div>
 
                   <div class="row mb-3">
-                    <label for="renewPassword" class="col-md-4 col-lg-3 col-form-label">Confirmer Mot de passe </label>
+                    <label for="renewPassword" class="col-md-4 col-lg-3 col-form-label">Confirmer mot de passe </label>
                     <div class="col-md-8 col-lg-9">
                       <input name="renewpassword" type="password" class="form-control" id="renewPassword" [(ngModel)]="changePassword.confirmeMotDePasse">
                     </div>
