--- a/src/app/pages/ministre/ministre-new/ministre-new.component.html
+++ b/src/app/pages/ministre/ministre-new/ministre-new.component.html
@@ -1,9 +1,9 @@
 <div class="p-3">
 
   <h4>NOUVEAU MINISTRE</h4>
-  <div class="alert alert-danger" role="alert" *ngIf="errorMessages.length">
+ <!-- <div class="alert alert-danger" role="alert" *ngIf="errorMessages.length">
     <p *ngFor="let msg of errorMessages">{{msg}}</p>
-  </div>
+  </div>-->
 
   <div class="card p-3">
     <div class="mb-3">
